# apl-viewhost-android

./: .dockerignore  .gitignore  Config  NOTICE.txt  README.md  android-checkstyle.xml  build.gradle  github.patch  gradle.properties  settings.gradle
alexaextjni/: CMakeLists.txt  build.gradle
alexaextjni/src/main/cpp/: jnidestination.cpp  jnidestinationfactory.cpp  jniextensionexecutor.cpp  jniextensionresource.cpp  jnimetricsextensionv2.cpp
alexaextjni/src/main/cpp/include/: jnidestination.h  jnidestinationfactory.h  jniextensionresource.h  jnimetricsextensionv2.h
apl/: .project  CMakeLists.txt  apl.map  build.gradle  proguard-rules.pro
apl/checkstyle/: checkstyle.xml
apl/documentation/: coverage.xml
apl/src/androidTest/: AndroidManifest.xml
apl/src/androidTest/java/com/amazon/apl/android/: APLTestContext.java  APLTestDocs.java  APLViewhostTest.java  ExtensionMediatorTest.java  RootConfigTest.java  RootContextTest.java
apl/src/androidTest/res/xml/: file_paths.xml
apl/src/main/: AndroidManifest.xml
apl/src/main/cpp/: jniaction.cpp  jniapl.cpp  jniapllayer.cpp  jniaplscenegraph.cpp  jniapltextproperties.cpp  jniaplview.cpp  jniaudioplayer.cpp  jniaudioplayerfactory.cpp  jnicomplexproperty.cpp  jnicomponent.cpp  jnicontent.cpp  jnidocumentcontext.cpp  jnidocumentmanager.cpp  jnidocumentsession.cpp  jniedittext.cpp  jniembeddeddocumentrequest.cpp  jnievent.cpp  jniextensionclient.cpp  jniextensioncommand.cpp  jniextensioncomponent.cpp  jniextensioneventhandler.cpp  jniextensionfilter.cpp  jniextensionmediator.cpp  jnigraphic.cpp  jnilivedata.cpp  jnimediaplayer.cpp  jnimediaplayerfactory.cpp  jnimetricstransform.cpp  jninoisefilter.cpp  jnipackagemanager.cpp  jnirootconfig.cpp  jnirootcontext.cpp  jniscaling.cpp  jnisession.cpp  jnisgcontent.cpp  jnisglayer.cpp  jnishadowblur.cpp  jnistyledtext.cpp  jnitext.cpp  jnitextlayout.cpp  (+2 more)
apl/src/main/cpp/include/: documentsession.h  jniaction.h  jniapllayer.h  jniaplscenegraph.h  jniapltextproperties.h  jniaplview.h  jniaudioplayer.h  jniaudioplayerfactory.h  jnicomplexproperty.h  jnicontent.h  jnidocumentcontext.h  jnidocumentmanager.h  jnidocumentsession.h  jniedittext.h  jniedittextbox.h  jniedittextfactory.h  jniembeddeddocumentrequest.h  jnievent.h  jniextensionmediator.h  jnigraphic.h  jnimediaplayer.h  jnimediaplayerfactory.h  jnimetricstransform.h  jnipackagemanager.h  jnirootconfig.h  jnirootcontext.h  jniscaling.h  jnisession.h  jnisgcontent.h  jnisglayer.h  jnisgtextmeasurecallback.h  jnitextlayout.h  jnitextmeasurecallback.h  jniutil.h  loggingbridge.h  scaling.h
apl/src/main/cpp/scenegraph/: jniedittext.cpp  jniedittextconfig.cpp  jniedittextfactory.cpp  jnifilter.cpp  jnimediamanager.cpp  jnimediamanager.h  jnimediaobject.cpp  jnimediaobject.h  jnipaint.cpp  jnisgaccessibility.cpp  jnishadow.cpp
apl/src/main/java/com/amazon/apl/android/: APLAccessibilityDelegate.java  APLAndroidLifecycleAdapter.java  APLBinding.java  APLChoreographer.java  APLController.java  APLExtensionExecutor.java  APLGradientDrawable.java  APLJSONData.java  APLKeyboard.java  APLLayout.java  APLLayoutParams.java  APLOptions.java  APLOptionsBuilder.java  APLVersionCodes.java  AVGFilter.java  Action.java  BoundObject.java  Component.java  Content.java  DocumentSession.java  DocumentState.java  EditText.java  EditTextProxy.java  Event.java  ExtensionClient.java  ExtensionCommandDefinition.java  ExtensionComponent.java  ExtensionEventHandler.java  ExtensionFilterDefinition.java  ExtensionMediator.java  Frame.java  IAPLController.java  IAPLViewPresenter.java  IAccessibilityProvider.java  IClock.java  IClockProvider.java  IDocumentLifecycleListener.java  ILegacyLocalExtension.java  IScrollable.java  ITextMeasurable.java  (+39 more)
apl/src/main/java/com/amazon/apl/devtools/: DevToolsProvider.java
apl/src/main/java/com/amazon/apl/enums/: APLEnum.java  AnimationQuality.java  AudioPlayerEventType.java  AudioTrack.java  BlendMode.java  ComponentType.java  ContainerDirection.java  Display.java  DisplayState.java  EventAudioTrack.java  EventControlMediaCommand.java  EventDirection.java  EventHighlightMode.java  EventMediaType.java  EventProperty.java  EventReason.java  EventScrollAlign.java  EventType.java  ExtensionComponentResourceState.java  FilterProperty.java  FilterType.java  FlexboxAlign.java  FlexboxJustifyContent.java  FocusDirection.java  FontStyle.java  GradientProperty.java  GradientSpreadMethod.java  GradientType.java  GradientUnits.java  GraphicElementType.java  (+41 more)
apl/src/main/res/font/: amazon_ember_display.xml
apl/src/main/res/layout/: activity_test.xml
apl/src/main/res/values/: attrs.xml  ids.xml  strings.xml
apl/src/test/java/android/util/: Log.java
apl/src/test/resources/: jacoco-agent.properties
discovery/: CMakeLists.txt  build.gradle  proguard-rules.pro
discovery/docs/uml/: extension-runtime-permission.uml
discovery/src/androidTest/: AndroidManifest.xml
discovery/src/main/: AndroidManifest.xml
discovery/src/main/aidl/com/amazon/alexaext/: ActivityDescriptor.aidl  SessionDescriptor.aidl
discovery/src/main/cpp/: jnidiscovery.cpp  jniextensionexecutor.cpp  jniextensionproxy.cpp  jniextensionregistrar.cpp  jniextensionresource.cpp
discovery/src/main/cpp/include/: jniextensionexecutor.h  jniextensionproxy.h  jniextensionregistrar.h
discovery/src/main/java/com/amazon/alexaext/: ActivityDescriptor.java  BaseRemoteProxyDelegate.java  DeferredRemoteProxyDelegate.java  ExtensionProxy.java  ExtensionRegistrar.java  IExtension.java  IExtensionProvider.java  ILiveDataUpdateCallback.java  LocalExtension.java  LocalExtensionProxy.java  RemoteExtensionProxy.java  ResourceHolder.java  SessionDescriptor.java
discovery/src/main/res/values/: arrays.xml  strings.xml
discovery/src/standard/java/com/amazon/alexaext/: BaseRemoteProxyDelegate.java  DiscoveryExtensionsProvider.java  ExtensionExecutor.java  ExtensionMessage.java  ExtensionRegistrar.java  ExtensionResourceProvider.java  ExtensionSchema.java  LocalExtension.java  LocalExtensionProxy.java  LocalExtensionV2.java  RemoteExtensionProxy.java  RemoteProxyDelegate.java
(+872 files in other folders)
